--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,10 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^8"
+    "phpunit/phpunit": "^8",
+    "psr/simple-cache": "^1.0"
+  },
+  "suggest": {
+    "psr/simple-cache": "For using the metadata cache."
   }
 }
